# hemmer-provider-sdk

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  dependabot-auto-merge.yml  publish.yml  release.yml
proto/: provider.proto
scripts/: pre-commit  setup.sh
src/: error.rs  generated.rs  lib.rs  logging.rs  schema.rs  server.rs  testing.rs  types.rs  validation.rs
